--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -1,30 +1,26 @@
 @import 'assets\css\reset.css';
 
+:root {
+    --mountain: rgb(28, 127, 255);
+    --background: rgb(61, 61, 61);
+}
+
 #mtn-div {
     position: relative;
     padding-top: 5vw;
     background-image: linear-gradient(#8cbeff, 40%, #dcdcff);
-    height: 20.2vw;
+    height: 20.14vw;
 }
 
 #title {
-    font-size: 3rem;
+    font-size: 4vw;
 	font-family: "Verdana";
 	font-variant: small-caps;
 
-    background-color: #bababa;
-
-	background-image: linear-gradient(135deg, #8cbeff, 40%, #bababa);
-	background-size: 100%;
-	background-repeat: repeat;
-	
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	-moz-background-clip: text;
-	-moz-text-fill-color: transparent;
+    color: #dcdcff;
 
     position: absolute;
-    top: 72%;
+    top: 78%;
     left: 51.5%;
     transform: translate(-50%, -50%);
 }
@@ -37,12 +33,15 @@
 }
 
 #main {
+    height: 5000px;
     margin-left: 18rem;
     margin-right: 18rem;
+    background-color: var(--mountain);
+    color: #bababa;
 }
 
 body {
 	margin: 0;
     margin-top: 0;
-	background-image: linear-gradient(#3d3d3d, 25%, #1a1a1a);
+	background-color: var(--mountain);
 }
