css breakpoint fix

--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -140,7 +140,7 @@ footer a {
     text-decoration: none;
 }
 
-@media (max-aspect-ratio: 1.1) {
+@media screen and (max-aspect-ratio: 1.1) {
     #mtn-div {
         height: 90vh;
     }
