--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -4,15 +4,12 @@
     --mountain: rgb(28, 127, 255);
     --background: rgb(61, 61, 61);
     --main-width: 72vw;
-    
 }
 
 body {
+    background-color: var(--mountain);
 	margin: 0;
-	background-color: var(--mountain);
 }
-
-
 
 #mtn-div {
     display: flex;
@@ -22,7 +19,6 @@ body {
     height: 80vh;
     background-image: linear-gradient(#8cbeff, 40%, #dcdcff);
 }
-
 #mtn-div svg {
     width: 100%;
     height: auto;
@@ -30,12 +26,14 @@ body {
     /* remove hairline gap between #main and mountain svg */
     margin-bottom: -0.5vh;
 }
-
 #mtn-div h1 {
     position: absolute;
     top: 77vh;
     left: 51vw;
     transform: translate(-50%, -100%);
+    
+    width: 100vw;
+    text-align: center;
 
     font-size: 4vw;
 	font-family: "Verdana";
@@ -44,15 +42,9 @@ body {
     color: #dcdcff;
 }
 
-
-
-
-
-
 #main {
     padding-top: 40vh;
-    --two-pad: calc(100vw - var(--main-width));
-    --pad: calc(var(--two-pad) / 2);
+    --pad: calc((100vw - var(--main-width)) / 2);
     padding-left: var(--pad);
     padding-right: var(--pad);
     padding-bottom: 4vh;
@@ -67,13 +59,11 @@ body {
     font-size: 3.5rem;
     font-style: italic;
 }
-
 #main h2 {
     color: #8cbeff;
     text-align: center;
     font-size: 2.5rem;
 }
-
 #main p {
     padding: 0;
     margin: 0;
@@ -81,6 +71,10 @@ body {
     font-size: 1.25rem;
     text-align: justify;
     font-family: Arial;
+}
+#main a {
+    color: #8cbeff;
+    font-style: italic;
 }
 #main .note:before {
     content: "Note: ";
@@ -95,10 +89,6 @@ body {
     font-style: italic;
 }
 
-#main a {
-    color: #8cbeff;
-    font-style: italic;
-}
 
 #schedule {
     display: flex;
@@ -124,7 +114,6 @@ body {
 #links {
     display: flex;
 }
-
 #links img {
     flex: 50%;
     width: 25%;
@@ -145,12 +134,10 @@ body {
     left: 36vw;
 }
 
-
 #main-to-footer {
     background-image: linear-gradient(var(--mountain), rgb(46, 46, 46));
     height: 10rem;
 }
-
 
 footer {
     height: 3rem;
@@ -160,7 +147,6 @@ footer {
     padding-left: 10vw;
     padding-right: 10vw;
 }
-
 footer p {
     font-size: 1rem;
     float: left;
@@ -172,7 +158,6 @@ footer p {
     font-family: Arial;
     font-style: italic;
 }
-
 footer a {
     color: #8d8d8d;
     font-family: Arial;
@@ -181,6 +166,8 @@ footer a {
 }
 
 @media (orientation: portrait) {
+    :root { --main-width: 80vw; }
+
     #mtn-div { height: 90vh; }
     #mtn-div h1 {
         width: 100vw;
@@ -192,16 +179,12 @@ footer a {
         font-size: 10vw;
 	}
 
-    #main {
-        padding-left: 10vw;
-        padding-right: 10vw;
-    }
     #main h1 { font-size: 3rem; }
     #main h2 { font-size: 2rem; }
 
     #schedule { display: block; }
-    #online { width: calc(var(--mountain-width) / 1.25); padding-bottom: 5rem;}
-    #in-person { width: calc(var(--mountain-width) / 1.1); }
+    #online { width: calc(var(--main-width) / 1.5); padding-bottom: 5rem;}
+    #in-person { width: calc(var(--main-width) / 1.5); }
     #schedule td { font-size: 0.8rem; }
 
     #puzzle {
